stuff to run outside IDE